--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
 <body>
   <div id="wrapper">
-    
+    <div id="background-top-img"></div>
   </div>
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 
 </html>
