--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
   <div id="wrapper">
     <div id="background-top-img"></div>
+    <div id="main_content_faq"></div>
   </div>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
