Added two sections in main faq and positioned them

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     <div id="background-top-img"></div>
     <div id="main_content_faq">
       <div id="heading">
-        <p><span><img src="assets/images/icon-star.svg"></span>FAQs</p>
+        <p>
+          <span><img alt="icon-star" src="assets/images/icon-star.svg"></span>
+          FAQs
+        </p>
+      </div>
+      <div id="main_questions">
+
       </div>
     </div>
   </div>
