Positioned questions through flex

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="normazile.css">
 
+  <script src="script.js"></script>
   <title>Frontend Mentor | FAQ accordion</title>
 
 </head>
@@ -28,6 +29,29 @@
       </div>
       <div id="main_questions">
 
+        <div class="question first">
+          <div class="always_on_show">What are apples, and how eat them?
+            <span><img alt="open" src="assets/images/icon-plus.svg"></span>
+          </div>
+        </div>
+
+        <div class="question second">
+          <div class="always_on_show">What are apples, and how eat them?
+            <span><img alt="open" src="assets/images/icon-plus.svg"></span>
+          </div>
+        </div>
+
+        <div class="question third">
+          <div class="always_on_show">What are apples, and how eat them?
+            <span><img alt="open" src="assets/images/icon-plus.svg"></span>
+          </div>
+        </div>
+
+        <div class="question fourth">
+          <div class="always_on_show">What are apples, and how eat them?
+            <span><img alt="open" src="assets/images/icon-plus.svg"></span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
