Start to adding questions

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         </p>
       </div>
       <div id="main_questions">
+        <div class="faq">
+          <div class="question">
+            <h3>What are apples and how to eat them?</h3>
           </div>
         </div>
       </div>
