Replaced questions with unique

--- a/index.html
+++ b/index.html
@@ -22,17 +22,67 @@
     <div id="background-top-img"></div>
     <div id="main_content_faq">
       <div id="heading">
-        <p>
-          <span><img alt="icon-star" src="assets/images/icon-star.svg"></span>
-          FAQs
-        </p>
+        <span><img alt="icon-star" src="assets/images/icon-star.svg"></span>
+        <h1>FAQs</h1>
+        
       </div>
-      <div id="main_questions">
-        <div class="faq">
-          <div class="question">
-            <h3>What are apples and how to eat them?</h3>
-          </div>
+      <div class="main_questions">
+        <div class="question faq-question">
+          <h3>What are apples and how to eat them?</h3>
+          <svg  xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31">
+            <path class="plusMinus" fill="#AD28EB"
+              d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z" />
+          </svg>
         </div>
+        <div class="answer faq-answer">
+          <p>Apples are a type of fruit that belongs to the Rosaceae family and are one of the most widely consumed
+            fruits worldwide. They come in various colors, including red, green, and yellow, and have a sweet, crisp,
+            and juicy flesh. Apples are not only delicious but also packed with essential nutrients, making them a
+            popular and healthy snack choice.</p>
+        </div>
+      </div>
+
+      <div class="main_questions  ">
+        <div class="question faq-question">
+          <h3>Who wrote the famous play "Romeo and Juliet"?</h3>
+          <svg  xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31">
+            <path class="plusMinus" fill="#AD28EB"
+              d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z" />
+          </svg>
+        </div>
+        <div class="answer faq-answer">
+          <p> "Romeo and Juliet" was written by William Shakespeare, one of the most renowned playwrights in history.</p>
+        </div>
+
+
+      </div>
+      <div class="main_questions">
+        <div class="question faq-question">
+          <h3>How does photosynthesis work?</h3>
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31">
+            <path class="plusMinus"  fill="#AD28EB"
+              d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z" />
+          </svg>
+        </div>
+        <div class="answer faq-answer">
+          <p>Photosynthesis is the process by which green plants and some other organisms convert sunlight, carbon dioxide, and water into glucose (a type of sugar) and oxygen, using chlorophyll and enzymes in their cells.</p>
+        </div>
+
+
+      </div>
+      <div class="main_questions  ">
+        <div class="question faq-question">
+          <h3>What is the capital of Australia?</h3>
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="31" fill="none" viewBox="0 0 30 31">
+            <path class="plusMinus" fill="#AD28EB"
+              d="M15 3.313A12.187 12.187 0 1 0 27.188 15.5 12.203 12.203 0 0 0 15 3.312Zm4.688 13.124h-3.75v3.75a.938.938 0 0 1-1.876 0v-3.75h-3.75a.938.938 0 0 1 0-1.875h3.75v-3.75a.938.938 0 0 1 1.876 0v3.75h3.75a.938.938 0 0 1 0 1.876Z" />
+          </svg>
+        </div>
+        <div class="answer faq-answer">
+          <p>The capital of Australia is Canberra.</p>
+        </div>
+
+
       </div>
     </div>
   </div>
